--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-curl http://github.com/goj/config-files/raw/master/web_install | sudo sh
+curl http://github.com/goj/config-files/raw/master/web_install | sh
