--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-curl https://github.com/goj/config-files/raw/master/web_install | sh
+curl https://raw.github.com/goj/config-files/master/web_install | sh
